--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">UniversalGameHelper</string>
+
+    <string name="donate_text">Donate</string>
+    <string name="share_text">Share</string>
 </resources>
