--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="donate_text">Donate</string>
     <string name="share_text">Share</string>
+    <string name="swipe_text">Swipe Right</string>
 </resources>
